--- a/data-analysis.Rmd
+++ b/data-analysis.Rmd
@@ -67,12 +67,12 @@ Todos los ingrantes del grupo hemos realizado de forma conjunta la visualizació
 
 En los siguientes fragmentos se incluye el código necesario para instalar y cargar las librerías necesarias para el análisis de los datos realizado.
 ```{r}
-install.packages("caret")
-install.packages("tidyverse")
-install.packages("plotly")
-install.packages("dplyr")
-install.packages("factoextra")
-install.packages("dendextend")
+#install.packages("caret")
+#install.packages("tidyverse")
+#install.packages("plotly")
+#install.packages("dplyr")
+#install.packages("factoextra")
+#install.packages("dendextend")
 ```
 ```{r}
 library(caret)
@@ -208,13 +208,23 @@ mushroom[, numerical_features] <- predict(range_numeric, newdata = mushroom[, nu
 str(mushroom)
 ```
 
+
 # Análisis de datos<a name="analysis"></a>
+
 
 ## Análisis aprendizaje supervisado<a name="supervised"></a>
 
-### Regresión Logística<a name="logistic"></a>
+Para trabajar con el dataset mediante el aprendizaje supervisado; es decir, utilizando datos que son etiquetados mediante la intervención de un ser humano, utilizaremos diferentes tipos de clasificadores, algunos de ellos ya trabajados durante las clases prácticas de la asignatura y otros que eran desconocidos para nosotros y sobre los cuales hemos tenido que investigar anteriormente sobre su funcionamiento en R.
+Los algoritmos de clasificación que hemos seleccionado y los cuales vamos a aplicar son:
+  1. Regresión logística.
+  2. KNN o el Vecino más cercano.
+  3. Árboles de decisión.
+  4. Random Forest.
+  5. MSV o Máquina de Soporte Vectorial.
+Una vez aplicados cada uno de los clasificadores, los compararemos entre sí y seleccionaremos el o los algoritmos que mayor precisión proporcionen sin llegar al sobreajuste, tratando de buscar que el resultado final sea generalizado para los datos.
 
-Primero se dividirá el dataset en dos conjuntos: uno de entrenamiento y otro de test. El conjunto de entrenamiento se utilizará para entrenar los modelos y el conjunto de test se utilizará para evaluarlos.
+
+En primer lugar, ante de comenzar a aplicar los clasificadores, dividiremos el dataset en dos conjuntos: el primer conjunto será el de entrenamiento o training y el segundo será el conjunto de prueba o test. El conjunto de entrenamiento lo utilizaremos para entrenar los distintos modelos y el conjunto de prueba lo utilizaremos para evaluar cada uno de ellos una vez obtenidos.
 
 ```{r}
 library(caTools)
@@ -228,17 +238,20 @@ table(training_set$class)
 table(test_set$class)
 ```
 
+
+### Regresión Logística<a name="logistic"></a>
+
 La regresión logística permite predecir el resultado de una variable categórica en función de las variables independientes o predictoras.
+A continuación se muestra un resumen del conjunto de datos de entrenamiento con el cual vamos a trabajar una vez aplicada la función glm().
 
 ```{r}
 rl_classiffier <- glm(class ~ ., family = binomial, data = training_set)
 summary(rl_classiffier)
 ```
-Una vez hemos aplicado la función glm(), obtenemos los valores residuales del modelo y los coeficientes de ajuste para cada una de las variables independientes.
-Además, obtenemos el p-value correspondiente a cada una de ellas. Las variables con dos o tres asteriscos aportan bastante relevancia como predictores; sin embargo, las variables que no poseen ninguno o uno son de menor relevancia.
 
-A continuación, procedemos a predecir las clases del conjunto de entrenamiento y de validación. Tomamos como umbral 0,5, de forma que si la probabilidad queda por encima de dicho umbral es que es comestible, pero si queda por debajo es que es venenoso.
-Por último crearemos la matriz de confusión para valorar los resultados de las predicciones.
+La función aplicada, glm(), obtiene los valores residuales del modelo y los coeficientes de ajuste para cada una de las variables independientes. Además, se obtiene el p-value correspondiente para cada una de ellas.
+En el resumen mostrado mediante la función summary(), se pueden observar variables con dos o tres asteriscos, las cuales aportan bastante relevancia al modelo como predictores; sin embargo, las variables que poseen un solo asterisco o incluso ninguno, significa que apenas aportan relevancia a los resultados.
+A continuación, procedemos a predecir las clases del conjunto de entrenamiento y de validación. Tomando como umbral '0,5', dividiremos los champiñones en comestibles y venenosos, de forma que si la probabilidad queda por encima de dicho umbral significará que el champiñón es comestible, y de lo contrario, si el resultado se mantiene por debajo, significará que el champiñón es venenoso. Para acabar, formaremos la matriz de confusión con los resultados de las predicciones para proceder a su análisis y valoración.
 
 ```{r}
 pred_train <- predict(rl_classiffier, newdata = training_set, type = "response")
@@ -251,9 +264,10 @@ print(confusion_m)
 accuracy <- sum(diag(confusion_m)) / sum(confusion_m)
 print(accuracy)
 ```
-Una vez hemos visto el resultado que muestra la matriz de confusión, se observa que la predicción tiene una precisión del 77,8%, lo que puede resultar algo baja.
 
-Repetimos el mismo proceso para el conjunto de test.
+
+Una vez obtenido el resultado mostrado mediante la matriz de confusión, se observa que la predicción posee una precisión del 77,8%.
+A continuación, se muestra el resultado de aplicar el mismo proceso anterior sobre el conjunto de prueba.
 
 ```{r}
 pred_test <- predict(rl_classiffier, newdata = test_set, type = "response")
@@ -267,8 +281,9 @@ accuracy_rl <- sum(diag(confusion_m)) / sum(confusion_m)
 print(accuracy_rl)
 ```
 
-Obtenemos una precisión con gran similitud a la del conjunto de training, un 77,3%.
-Para finalizar la regresión logística, vamos a graficar la curva ROC, la cual nos aporta la visualización de la relación entre los falsos y verdaderos positivos.
+Una vez obtenido este segundo resultado, podemos observar que hay una gran similitud entre los resultados obtenidos para ambos conjuntos de datos, resultando esta vez en un 77,3%.
+Antes de acabar de aplicar el clasificador de regresión logística, vamos a proceder a graficar la curva ROC, la cual nos aporta mayor visualización de la relación entre los falsos y verdaderos positivos.
+
 ```{r}
 library(ROCR)
 pred_rl_roc <- prediction(as.numeric(pred_test), as.numeric(test_set$class))
@@ -276,26 +291,32 @@ perf_rl_roc <- performance(pred_rl_roc, "tpr", "fpr")
 perf_rl_auc <- performance(pred_rl_roc, "auc")
 
 print(perf_rl_auc@y.values[[1]])
-plot(perf_rl_roc)
+plot(perf_rl_roc, col = "lightblue", lwd = 5)  
 ```
-Observando la curva ROC resultante podemos comentar que se mantiene por encima de la diagonal, lo que es buena señal, pero se aproxima a ella, pudiendo haber proporcionado resultados mejores.
+
+Observando la curva ROC resultante podemos comentar que se mantiene por encima de la diagonal, lo que es buena señal, pero se aproxima a ella, pudiendo haber proporcionado resultados mejores resulta ser un modelo bastante generalizado.
+
 
 ### k-NN<a name="knn"></a>
 
-Antes de nada, para poder aplicar knn, debemos transformar las variables categóricas en numéricas.
+Mediante el algoritmo de clasificación llamado k-NN se asigna una nueva observación a la clase más común entre sus "k" vecinos más cercanos en el espacio de características.
+Antes de nada, para poder aplicar el algoritmo k-NN, debemos transformar las variables categóricas en numéricas.
 
 ```{r}
 mushroom_num <- dummyVars(" ~ .", data = mushroom, fullRank = TRUE) %>% predict(mushroom)
 mushroom_num <- as.data.frame(mushroom_num)
 ```
 
-Visualizamos las variables categóricas codificadas y las dimensiones del dataset.
+A continuación, se visualizan las variables categóricas ya codificadas y las dimensiones del dataset.
+
 ```{r}
 dim_mushroom <- dim(mushroom_num)
 print(dim_mushroom)
 str(mushroom_num)
 ```
-De nuevo dividimos los datos en conjunto de entrenamiento y de validación. En este caso 0 se corresponde con comestible y 1 con venenosa.
+
+Debido al hecho de necesitar la transformación de las variables categóricas en numéricas, procedemos en este paso a dividir los datos en los conjuntos de entrenamiento y de validación. En este caso, el valor 0 corresponde con los champiñones comestibles y el valor 1 con los champiñones venenosos.
+
 ```{r}
 library(caTools)
 set.seed(18)
@@ -308,15 +329,26 @@ table(training_set_num$class)
 table(test_set_num$class)
 ```
 
-Para comenzar a aplicar el clasificador del vecino más cercano, haremos uso de la función knn() tomando como valor de k=5.
+El siguiente paso será determinar el valor óptimo de k antes de proceder a aplicar la función. Para ello, utilizaremos el resultado que nos proporciona el cálculo de la raíz cuadrada del número de observaciones del conjunto de entrenamiento.
+
+```{r}
+
+nrows_class <- NROW(training_set_num) 
+k <- sqrt(nrows_class)
+k <- round(k)
+k
+```
+
+Una vez hemos obtenido el valor de k, procedemos a realizar las predicciones. Para llevar a cabo la aplicación del clasificador llamado 'el vecino más cercano', haremos uso de la función knn() de la librería class.
 
 ```{r}
 library(class)
 set.seed(18)
-pred_knn <- knn(train = training_set_num[, -1], test = test_set_num[, -1], cl = training_set_num$class, k = 5)
+pred_knn <- knn(train = training_set_num[, -1], test = test_set_num[, -1], cl = training_set_num$class, k = k)
 summary(pred_knn)
 ```
-Una vez tenemos los resultados de las predicciones, construimos la matriz de confusión.
+
+Una vez obtenidos los resultados de las predicciones en este caso, podemos de igual forma construir la matriz de confusión.
 
 ```{r}
 confusion_m <- table(test_set_num$class, pred_knn)
@@ -325,7 +357,9 @@ confusion_m
 accuracy_knn <- sum(diag(confusion_m)) / sum(confusion_m)
 accuracy_knn
 ```
-Como resultado de la matriz de confusión, tenemos una precisión del 99%, resultando ser mejor que en la regresión logística aunque probablemente sobreajustado.
+
+Como resultado final de la matriz de confusión, obtenemos una precisión resultante del 97%, la cual mejora respecto al algoritmo de clasificación anterior, aunque tendiendo a poseer mayor sobreajuste.
+De forma más visual, obtenemos a continuación la gráfica de la curva ROC y el cálculo del área bajo la misma.
 
 ```{r}
 library(ROCR)
@@ -334,33 +368,30 @@ perf_knn_roc <- performance(pred_knn_roc, "tpr", "fpr")
 perf_knn_auc <- performance(pred_knn_roc, "auc")
 
 print(perf_knn_auc@y.values[[1]])
-plot(perf_knn_roc)
+plot(perf_knn_roc, col = "lightblue", lwd = 5)  
 ```
-Una vez obtenemos la curva ROC y el resultado del área de debajo de la misma, observamos que el resultado es muy positivo, ya que gráficamente se aleja de la diagonal.
+
+Una vez obtenemos la curva ROC y su área, observamos que el resultado es muy positivo en cuanto a precisión de los resultados, ya que como se puede observar gráficamente se aleja de la diagonal.
+
 
 ### Clasificación con Árbol de Decisión<a name="arbol"></a>
 
-Comenzamos aplicando el árbol de decisión mediante la función rpart() como se muestra a continuación.
+Los árboles de decisión se basan en la construcción de reglas lógicas (divisiones de los datos entre rangos o condiciones) a partir de los datos de entrada.
+Para trabajar con este clasificador comenzamos aplicando la función del árbol de decisión, rpart(), sobre el conjunto de datos de entrenamiento como se muestra a continuación.
 
 ```{r}
 library(rpart)
 set.seed(18)
 dt_classiffier <- rpart(class ~ ., data = training_set)
 ```
+Una vez obtenido el resultado, lo graficaremos para facilitar así el análisis del resultado.
 
-A continuación vamos a visualizar el árbol de decisión normal y el árbol de decisión después de aplicar el pruning.
 ```{r}
-library(rattle)
-tree2 <- rpart(class ~ ., training_set,
-  method = "class",
-  control = rpart.control(cp = 0.00001)
-)
-fancyRpartPlot(tree2)
-
-pruned <- prune(tree2, cp = 0.01)
-fancyRpartPlot(pruned)
+library(rpart.plot)
+rpart.plot(dt_classiffier)
 ```
-Construimos la matriz de confusión al igual que en los casos anteriores.
+
+Construimos la matriz de confusión con los resultados obtenidos anteriormente para este caso.
 
 ```{r}
 pred_dt <- predict(dt_classiffier, newdata = test_set, type = "class")
@@ -371,11 +402,7 @@ confusion_m
 accuracy_dt <- sum(diag(confusion_m)) / sum(confusion_m)
 accuracy_dt
 ```
-
-Una vez tenemos el resultado para el valor de precisión en la predicción aplicando el árbol de decisión, 83%,
-pasamos a aplicar de forma visual la construcción de la gráfica de la curva ROC y el cálculo del AUC. En este caso,
-continúa siendo mejor resultado que el obtenido mediante la regresión logística, pero quedando por debajo del
-resultado obtenido al aplicar KNN.
+Una vez tenemos el resultado para el valor de precisión en la predicción aplicando el árbol de decisión, 83%, procedemos a construir la gráfica de la curva ROC y a calcular el valor correspondiente al AUC. En este caso, continúa siendo mejor resultado que el obtenido mediante la regresión logística, puesto que resulta en una mayor precisión, pero al igual que el algoritmo de k-NN, tiende a ser más sobreajustado.
 
 ```{r}
 library(ROCR)
@@ -384,13 +411,14 @@ perf_dt_roc <- performance(pred_dt_roc, "tpr", "fpr")
 perf_dt_auc <- performance(pred_dt_roc, "auc")
 
 print(perf_dt_auc@y.values[[1]])
-plot(perf_dt_roc)
+plot(perf_dt_roc, col = "lightblue", lwd = 5)  
 ```
+
 
 ### Clasificador Random Forest<a name="random"></a>
 
-Comenzamos aplicando el clasificador de Random Forest mediante la función llamada de la misma forma; es decir, randomForest().
-En esta función, el valor correspondiente al parámetro ntree indica la cantidad de árboles de decisión que formarán parte del clasificador.
+El algoritmo de Random Forest trabaja mediante la combinación de árboles predictores tal que cada árbol depende de los valores de un vector aleatorio.
+Comenzamos aplicando dicho clasificador mediante la función llamada de la misma forma; es decir, randomForest(). En esta función, el valor correspondiente al parámetro llamado 'ntree' indica la cantidad de árboles de decisión que formarán parte del clasificador.
 
 ```{r}
 library(randomForest)
@@ -398,7 +426,13 @@ set.seed(18)
 rf_classiffier <- randomForest(class ~ ., data = training_set, ntree = 250)
 ```
 
-Realizamos las predicciones sobre el conjunto de datos y construimos la matriz de confusión.
+Mediante su gráfica, vamos a proceder a comparar los errores en función del aumento del número de árboles; es decir, cuanto más vaya aumentando el número de árboles hasta un umbral determinado, menor cantidad de errores poseerá la predicción.
+
+```{r}
+plot(rf_classiffier)
+```
+
+Calculamos las predicciones sobre el conjunto de datos de prueba y construimos la matriz de confusión.
 
 ```{r}
 pred_rf <- predict(rf_classiffier, newdata = test_set, type = "class")
@@ -410,8 +444,7 @@ accuracy_rf <- sum(diag(confusion_m)) / sum(confusion_m)
 accuracy_rf
 ```
 
-De forma similar al clasificador KNN, obtenemos un valor de precisión del 99%.
-Definimos la curva ROC para este caso y realizamos el cálculo del área bajo la curva, los cuales nos simbolizan su altísima precisión probablemente causada por sobreajuste.
+Una vez obtenido el valor de la precisión para este caso, definimos la curva ROC y procedemos a realizar el cálculo del área bajo la curva. Mediante este último paso se puede observar su tan alta precisión, la cual indica demasiado sobreajuste sin ser conveniente.
 
 ```{r}
 library(ROCR)
@@ -420,14 +453,14 @@ perf_rf_roc <- performance(pred_rf_roc, "tpr", "fpr")
 perf_rf_auc <- performance(pred_rf_roc, "auc")
 
 print(perf_rf_auc@y.values[[1]])
-plot(perf_rf_roc)
+plot(perf_rf_roc, col = "lightblue", lwd = 5)  
 ```
+
 
 ### Kernel SVM Classifier
 
-Para aplicar el clasificador Máquina de Soporte Vectorial hacemos uso de la función svm().
-En esta función, los valores de los parámetros type y kernel hacen referencia al tipo de clasificador; es decir,
-que el kernel es de tipo radial y gaussiano. 
+El clasificador de la máquina vectorial, encuentra la curva que es capaz de separar y clasificar los datos de entrenamiento garantizando que la separación entre ésta y ciertas observaciones del conjunto de entrenamiento resulte ser lo mayor posible.
+Para llevar a cabo la aplicación del clasificador llamado 'Máquina de Soporte Vectorial' hacemos uso de la función svm(). En dicha función, los valores de los parámetros 'type' y 'kernel' hacen referencia al tipo de clasificador lo que significa que el kernel será de tipo radial y gaussiano. 
 
 ```{r}
 library(e1071)
@@ -437,7 +470,7 @@ svm_classiffier <- svm(class ~ .,
   type = "C-classification", kernel = "radial"
 )
 ```
-La predicción y la matríz de confusión son entonces las mostradas a continuación.
+A continuación, se calcula la predicción y se construye la matríz de confusión, las cuales resultan ser las siguientes.
 
 ```{r}
 pred_svm <- predict(svm_classiffier, newdata = test_set, type = "class")
@@ -449,8 +482,8 @@ accuracy_svm <- sum(diag(confusion_m)) / sum(confusion_m)
 accuracy_svm
 ```
 
-Como se puede observar el valor de la predicción en este caso resulta ser del 95%, un resultado bueno que no muestra señales de sobreajuste.
-Para finalizar, construimos la curva ROC correspondiente en este caso 
+Como se puede observar, el valor de la precisión en la predicción en este caso resulta ser del 95%, un resultado bueno que no muestra señales de sobreajuste.
+Para finalizar, construimos la curva ROC correspondiente en este caso y calculamos su área.
 
 ```{r}
 library(ROCR)
@@ -459,14 +492,14 @@ perf_svm_roc <- performance(pred_svm_roc, "tpr", "fpr")
 perf_svm_auc <- performance(pred_svm_roc, "auc")
 
 print(perf_svm_auc@y.values[[1]])
-plot(perf_svm_roc)
+plot(perf_svm_roc, col = "lightblue", lwd = 5)  
 ```
+
 
 ### Conclusiones
 
-Una vez aplicados los cinco distintos métodos de clasificación sobre nuestro dataset tras realizar el preprocesamiento, podemos concluir diciendo que los clasificadores de KNN y Random Forest son los que poseen mayor precisión y, por tanto, menor error de predicción. Sin embargo, con los resultados obtenidos por parte de ambos podemos detectar un posible sobreajuste, no beneficiando al modelo. Por esta razón, creemos que resulta más beneficioso sacrificar parte del valor de precisión, teniendo en cuenta algunos valores de falsos positivos y falsos negativos, como ocurre en el caso del clasificador de la Máquina de Soporte Vectorial, aprovechando así su capacidad de mayor generalización.
-
-En las siguientes gráficas podemos comparar los niveles de precisión y AUC de los diferentes clasificadores.
+Una vez aplicados los cinco distintos métodos de clasificación sobre nuestro dataset llamado 'mushroom' tras haber realizado antes su preprocesamiento, podemos concluir diciendo que el clasificador de Random Forest es el que ha resultado poseer un mayor valor en la precisión de la predicción en la clasificación y, por lo tanto, un menor valor para el error de predicción. Sin embargo, al aplicar este algoritmo hemos obtenido un mayor sobreajuste, el cual no beneficia al modelo ya que se busca que los resultados obtenidos sean precisos, pero también generalizados para los datos. Por esta razón, consideramos que resulta más beneficioso sacrificar parte del valor de precisión, teniendo en cuenta algunos valores de falsos positivos y falsos negativos, como ocurre en el caso de los clasificadores de la Máquina de Soporte Vectorial o k-NN, aprovechando así su capacidad de mayor generalización.
+Sobre los gráficos que se muestran a continuación se pueden comparar los distintos niveles de precisión y AUC para cada uno de los diferentes clasificadores que han sido aplicados.
 
 ```{r}
 accuracy_comp <- matrix(c(accuracy_rl, accuracy_knn, accuracy_dt, accuracy_rf, accuracy_svm), ncol = 5)
@@ -491,6 +524,8 @@ barplot(perf_auc,
   col = "#7fd6d9"
 )
 ```
+
+
 ## Análisis aprendizaje no supervisado<a name="unsupervised"></a>
 
 En este apartado se analizará el dataset a través de algoritmos de aprendizaje no supervisado. En concreto, se probarán los algoritmos k-means y clustering jerárquico.
